--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    /* overflow-x: hidden; */
 }
 
 body {
@@ -1272,7 +1273,7 @@ button.accordion-button:active {
 }
 
 .fleetcontent ul {
-    float: left;
+    /* float: left; */
     display: grid;
     text-align: left;
 }
@@ -1454,4 +1455,15 @@ font-size: 16px;
 font-weight: 500;
 line-height: 19.2px;
 color: white;
+ }
+
+ .contactForm Form label {
+    color: #FF5C1D;
+    font-weight: bold;
+ }
+
+ .formcont {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
  }
