--- a/src/style.css
+++ b/src/style.css
@@ -128,7 +128,7 @@ span {
 
 }
 
-.slider {
+.homeslider {
     background-image: url('/public/slider.png');
     background-size: cover;
     background-position: center;
@@ -1070,6 +1070,11 @@ button.accordion-button:active {
     padding: 50px 0 50px 0;
 }
 
+.allservices  .row>* {
+    
+    margin-bottom: 30px;
+}
+
 .allservices h6 {
     font-family: Barlow;
     font-size: 24px;
@@ -1160,7 +1165,7 @@ button.accordion-button:active {
 }
 
 .serviceBox {
-    width: 360px;
+    width: 100%;
     height: 330px;
     top: 3035px;
     left: 154px;
@@ -1467,3 +1472,38 @@ color: white;
     flex-direction: column;
     justify-content: center;
  }
+
+ .css-aq8pb7-MuiSvgIcon-root {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    width: 1em;
+    height: 1em;
+    display: inline-block;
+    fill: currentColor;
+    -webkit-flex-shrink: 0;
+    -ms-flex-negative: 0;
+    flex-shrink: 0;
+    -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+    transition: fill 10ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+    font-size: 1.5rem;
+    font-size: 15px;
+}
+.offcanvas-body {
+    background-color: #141a1c;
+    color: #f0f0f0;
+    
+
+}
+.offcanvas.hiding, .offcanvas.show, .offcanvas.showing {
+    visibility: visible;
+    width: 100%!important;
+    text-align: center!important;
+}
+.mobilenave {
+    display: none;
+}
+.mobilenave .mb-3 {
+    margin-bottom: 0!important ;
+}
